test/TestPhases/parser/invalid/eofinlastlinedoccomment3.blc

@[EntryPoint]
activity Main () // bla
    await true
end /** blabla
    blabla
    blabla */